[package]
name = "binary_size"
version = "0.1.0"
authors = ["Kevin Stenerson <kestred@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["async-stripe-tsar/full", "async-stripe-tsar/webhook-events"]
runtime-blocking = ["async-stripe-tsar/runtime-blocking"]
runtime-async = ["async-stripe-tsar/runtime-async-std-surf", "async-std"]
checkout = ["async-stripe-tsar/checkout"]
billing = ["async-stripe-tsar/billing"]
connect = ["async-stripe-tsar/connect"]
fraud = ["async-stripe-tsar/fraud"]
issuing = ["async-stripe-tsar/issuing"]
orders = ["async-stripe-tsar/orders"]
sigma = ["async-stripe-tsar/sigma"]
webhook-endpoints = ["async-stripe-tsar/webhook-endpoints"]

[dependencies]
async-stripe-tsar = { path = "../../", default-features = false }
async-std = { version = "1.7.0", features = ["attributes"], optional = true }
